blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
  labels:
    app: blogging-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogging-application
  template:
    metadata:
      labels:
        app: blogging-application
    spec:
      containers:
      - name: blog-container
        securityContext:
          privileged: false
        image: anvesh35/blogging-application:v2.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: blogging-svc
  labels:
    app: blogging-application
spec:
  type: ClusterIP
  selector:
    app: blogging-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
